--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,12 +8,20 @@
     "@material-ui/core": "^4.12.4",
     "@monaco-editor/react": "^4.6.0",
     "@mui/material": "^6.4.1",
+    "@tailwindcss/postcss": "^4.0.3",
+    "@tailwindcss/vite": "^4.0.3",
+    "ajv": "^8.17.1",
+    "autoprefixer": "^10.4.20",
     "cra-template": "1.2.0",
+    "lucide-react": "^0.474.0",
+    "postcss": "^8.5.1",
+    "postcss-cli": "^11.0.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.8",
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.3",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "tailwindcss": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^7.1.5"
   }
 }
