--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.3",
     "react-scripts": "5.0.1",
+    "remark-gfm": "^4.0.1",
     "tailwindcss": "^4.0.3"
   },
   "scripts": {
