--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.14.0",
     "@material-ui/core": "^4.12.4",
     "@monaco-editor/react": "^4.6.0",
+    "@mui/icons-material": "^7.0.1",
     "@mui/material": "^6.4.1",
     "@tailwindcss/postcss": "^4.0.3",
     "@tailwindcss/vite": "^4.0.3",
@@ -19,6 +20,7 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.8",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-markdown": "^9.0.3",
     "react-scripts": "5.0.1",
     "remark-gfm": "^4.0.1",
