--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "ajv": "^8.17.1",
     "autoprefixer": "^10.4.20",
     "cra-template": "1.2.0",
+    "framer-motion": "^12.17.0",
     "lucide-react": "^0.474.0",
     "postcss": "^8.5.1",
     "postcss-cli": "^11.0.0",
