--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-markdown": "^9.0.3",
     "react-scripts": "5.0.1",
+    "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "tailwindcss": "^4.0.3"
   },
