--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,35 @@
+annotated-types==0.7.0
+anyio==4.9.0
 blinker==1.8.2
+cachetools==5.5.2
+certifi==2025.7.14
+charset-normalizer==3.4.2
 click==8.1.7
+dotenv==0.9.9
 Flask==3.0.3
 Flask-Cors==5.0.0
+google-auth==2.40.3
+google-genai==1.28.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
 importlib_metadata==7.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.11.7
+pydantic_core==2.33.2
+python-dotenv==1.1.1
+requests==2.32.4
+rsa==4.9.1
+sniffio==1.3.1
+tenacity==8.5.0
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+urllib3==2.5.0
+websockets==15.0.1
 Werkzeug==3.0.3
 zipp==3.18.2
